--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "db:migrate": "node scripts/migrate.js",
+    "db:migrate-full": "node scripts/migrate-full.js",
     "db:seed": "node scripts/seed.js"
   },
   "keywords": ["kitchen", "recipes", "cooking"],
@@ -16,7 +17,10 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "twilio": "^4.19.0",
+    "pdfkit": "^0.14.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
